--- a/PAGS/bio.html
+++ b/PAGS/bio.html
@@ -8,7 +8,7 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 
-<body style="background-image:url('../IMG/g2.jpg'); color: whitesmoke; background-size: cover;">
+<body style="background-image:url('../IMG/g2.jpg'); color: whitesmoke; background-size: cover; padding: 0 30%;">
 
 <!--inicio texto bio-->
 <header>
