--- a/PAGS/bio.html
+++ b/PAGS/bio.html
@@ -1,49 +1,68 @@
 <!DOCTYPE html>
 <html>
 <head>
-		<title>BIO</title>
-		<meta charset=utf-10>
-		<meta name=viewport content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" type="text/css" href="../CSS/styles.css">
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+ <title>BIO</title>
+ <meta charset=utf-10>
+ <meta name=viewport content="width=device-width, initial-scale=1">
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+ <link rel="stylesheet" type="text/css" href="../CSS/styles.css">
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
-
 <body style="background-image:url('../IMG/g2.jpg'); color: whitesmoke; background-size: cover;">
-
-<!--inicio texto bio-->
+<!--Title-->
 <header>
-  		<h1>BIO</h1>
+ <h1>BIO</h1>
 </header>
-<div class="texto">
-<p>Gon Mind a.k.a Gonzalo Mind a.k.a. GMIND Dj y productor de música electrónica. 	
-		</p>
-<p>Generos: EBM / Industrial / Techno / Industrial-Techno / Tech-Trance / Hard Style.
-			</p>
-<p>Argentino, nacido en Concordia Entre Ríos, residiendo actualmente en la Capital Federal.
-		</p>
-<p>La carrera comenzó en el 2003 con un perfil dedicado a la música electrónica pasando por varios estilos con el eje en el género del Techno.
-</p>
-<p>Comenzando a producir música con el nombre GMIND dentro del género EBM Industrial bajo su propio sello Mind over Music y colaborando con varias bandas locales y proyectos musicales así como también produciendo música para cine y TV.
-		</p>
-<p>En 2012 ya con el pseudónimo "Gon Mind" se lanza como DJ y en poco tiempo se fue convirtiendo en un referente del underground local, para el año 2014 comienza produciendo sus propios eventos a través de la productora: Underkraf la mayoría de ellos con acceso libre y gratuito dando el espacio para que otros djs también pueden tener difusión.
-</p>
+<!--Nav Menu-->
+<div class="menu">
+ <ul class="nav justify-content-center">
+  <li class="nav-item" >
+   <a class="nav-link active" aria-current="page" href="../PAGS/bio.html">Bio</a>
+  </li>
+  <li class="nav-item">
+   <a class="nav-link active" aria-current="page" href="../PAGS/Tour.html">Tour</a>
+  </li>
+  <li class="nav-item">
+   <a class="nav-link active" aria-current="page" href="../PAGS/Music.html">Music</a>
+  </li>
+  <li class="nav-item" >
+   <a class="nav-link active" aria-current="page" href="../PAGS/Media.html">Media</a>
+  </li>
+  <li class="nav-item" >
+   <a class="nav-link active" aria-current="page" href="../PAGS/Contact.html">Contact</a>
+  </li>
+</ul>
 </div>
-
-<!--fin texto bio-->
-<div class="home">
-<li><a href="../index.html" target="_blank">HOME</a> </li>
+<!--Text-->	
+<div class="d-flex justify-content-center">	
+ <div class="texto">
+  <p>Gon Mind a.k.a Gonzalo Mind a.k.a. GMIND Dj y productor de música electrónica.</p>
+  <p>Generos: EBM / Industrial / Techno / Industrial-Techno / Tech-Trance / Hard Style.</p>
+  <p>Argentino, nacido en Concordia Entre Ríos, residiendo actualmente en la Capital Federal.</p>
+  <p>La carrera comenzó en el 2003 con un perfil dedicado a la música electrónica pasando por varios estilos con el eje en el género del Techno.</p>
+  <p>Comenzando a producir música con el nombre GMIND dentro del género EBM Industrial bajo su propio sello Mind over Music y colaborando con varias bandas locales y proyectos musicales así como también produciendo música para cine y TV.</p>
+  <p>En 2012 ya con el pseudónimo "Gon Mind" se lanza como DJ y en poco tiempo se fue convirtiendo en un referente del underground local, para el año 2014 comienza produciendo sus propios eventos a través de la productora: Underkraf la mayoría de ellos con acceso libre y gratuito dando el espacio para que otros djs también pueden tener difusión.</p>
+ </div>
 </div>
-<!--inicio redes sociales y copyright-->
-<footer>
-	<div class="footer">
-	   <a class="btn btn-primary" href="https://www.facebook.com" role="button">Facebook</a>
-	   <a class="btn btn-primary" href="https://www.instagram.com" role="button">Instagram</a>
-	   <a class="btn btn-primary" href="https://www.soundcloud.com" role="button">SoundCloud</a>
-		  <p> <a> Copyright - 2022 © Gon Mind</a> </p>         
+<!--To Home-->
+<div>
+	<div class="home">
+	 <li><a href="../index.html" target="_blank">HOME</a></li>
 	</div>
-	</footer>			                       	
-<!--fin redes sociales y copyright-->
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-</body>
-</html>
+   </div>
+   <!--Footer/Social Networks-->
+   <footer class="d-flex justify-content-center text-center flex-column">
+	<div class="footer">
+	 <a class="btn" href="https://www.facebook.com/gmind" role="button"><i class="bi bi-facebook bi-align-center"></i></a>
+	 <a class="btn" href="https://www.instagram.com/gon.mind" role="button"><i class="bi bi-instagram bi-align-center"></i></a>
+	 <a class="btn" href="https://soundcloud.com/gmind" role="button"><i class="bi bi-cloudy-fill bi-align-center"></i></a>
+	 <a class="btn" href="https://www.mixcloud.com/gmind" role="button"><i class="bi bi-cloudy bi-align-center"></i></i></a>
+	</div>
+   <div>
+	<a> Copyright - 2022 © Gon Mind</a> 
+   </div>
+   </footer>			                       	
+   <!--Java Script-->
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+   </body>
+   </html>
